--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ display: flex;
 .navbar-ul{
   display: flex;
   width: 489px;
-height: Hug 52px;
+height: 52px;
 gap: 20px;
 opacity: 0px;
 list-style-type: none;
@@ -33,7 +33,7 @@ padding-left: 600px;
 
 }
 .navcontainer{
-  font-family: Inter Tight;
+font-family: Inter Tight;
 font-size: 16px;
 font-weight: 500;
 line-height: 20px;
@@ -47,13 +47,61 @@ justify-content: center;
 
 .but-how{
   border: 1px solid #FBFBFB66;
- 
   width: 114px;
+height: 44px;
+
+gap: 10px;
+border-radius: 12px 12px 12px 12px;
+margin-top:-150px;
+opacity: 0px;
+
+}
+
+.but-veg{
+  width: 101px;
+height: 44px;
+
+gap: 10px;
+border-radius: 12px 12px 12px 12px;
+border: 1px solid #FBFBFB66;
+opacity: 0px;
+
+}
+
+.but-rev{
+  width: 81px;
 height: 44px;
 padding: 12px 0px 0px 0px;
 gap: 10px;
 border-radius: 12px 12px 12px 12px;
-
+border: 1px solid #FBFBFB66;
 opacity: 0px;
+
+}
+.logo-svg{
+  width: 194px;
+height: 18px;
+gap: 0px;
+opacity: 0px;
+margin-top:20px;
+
+}
+
+.but-shop{
+  width: 157px;
+height: 52px;
+padding: 16px 32px 16px 32px;
+gap: 10px;
+border-radius: 30px 30px 30px 30px;
+opacity: 0px;
+background: #7A3145;
+font-family: Inter Tight;
+font-size: 18px;
+font-weight: 600;
+line-height: 20px;
+letter-spacing: -0.015em;
+
+
+
 
 }
