--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ padding-left: 600px;
 
 }
 .navcontainer{
-font-family: Inter Tight;
+font-family: inter tight;
 font-size: 16px;
 font-weight: 500;
 line-height: 20px;
