--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,26 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
+body{
+  font-family: "Inter Tight", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
 
 .container{
   width: 1280px;
   margin: 0 auto;
 }
 
+
 .organic-vegatables{
   background-color: #7A3145;
-  padding: 5%;
-  gap: 50px;
+  
 }
 
 .main-text{
@@ -20,7 +32,6 @@
   display: flex;
   flex-direction: column;
   margin: 5%;
-  
 }
 
 .main-text > .opacity-vegetables-text{
@@ -44,8 +55,11 @@
 .products-list{
   list-style-type: none;
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
-  gap: 21px;
+  column-gap: 0.5%;
+  row-gap: 0.1%;
+  margin: 5%;
   
 }
 
@@ -54,7 +68,11 @@
   border-radius: 40px;
   gap: 10px; 
   width: 346px;
-  padding: 32px;
+  padding: 5%;
+  margin: 5%;
+  
+  
+  
 }
 
 .product-card > h3 {
@@ -65,4 +83,15 @@
   color: #7A3145;
   margin-left: 10px 0;
 }
+
+.product-card > p{
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 18px;
+  letter-spacing: -1.5%;
+  color:#141414;
+  margin-top: 2%;
+
+}
+
 
