--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,53 @@
 
+body {
+  font-family: "Inter Tight", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+
+.container {
+  width: 1280px;
+  margin: 0 auto;
+}
+
+.first-div {
+  background-color: #576f35;
+  display: flex;
+  flex-direction: column;
+  gap: 128px;
+  background-image: url(/images/hero.jpg);
+  background-repeat: no-repeat;
+  background-position: right;
+  font-family: "Inter Tight" sans-serif;
+  padding-left: 100px;
+}
+
+.first-div .title {
+  font-weight: 600;
+  font-size: 76px;
+  line-height: 1;
+  letter-spacing: -1.5%;
+  color: #fbfbfb;
+  text-align: left;
+  width: 502px;
+}
+
+.explain {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.2;
+  color: #fbfbfb;
+  width: 472px;
+  height: 80px;
+}
+
+.first-image {
+  width: 650px;
+  height: 800px;
+  background-image: linear-gradient(rgba(20, 20, 20, 0.2));
+}
+
+
 .organic-vegatables{
   background-color: #7A3145;
   padding: 100px;
@@ -44,15 +93,18 @@
   display: flex;
   flex-wrap: wrap;
   gap: 21px;
-  
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 .product-card{
   background-color: #FBFBFB;
   border-radius: 40px;
-  gap: 10px; 
   width: 346px;
   padding: 32px;
+  gap: 10px;
+  box-sizing: border-box;
 }
 
 .product-card > h3 {
@@ -61,7 +113,7 @@
   line-height: 32px;
   letter-spacing: -1.5%;
   color: #7A3145;
-  margin-left: 10px 0;
+
 }
 
 .product-card > p{
@@ -70,55 +122,6 @@
   line-height: 18px;
   letter-spacing: -1.5%;
   color:#141414;
-  margin-top: 2%;
-
 }
 
 
-body {
-  font-family: "Inter Tight", sans-serif;
-  font-optical-sizing: auto;
-  font-style: normal;
-}
-
-.container {
-  max-width: 1280px;
-  margin: 0 auto;
-}
-
-.first-div {
-  background-color: #576f35;
-  display: flex;
-  flex-direction: column;
-  gap: 128px;
-  background-image: url(/images/hero.jpg);
-  background-repeat: no-repeat;
-  background-position: right;
-  font-family: "Inter Tight" sans-serif;
-  padding-left: 100px;
-}
-
-.first-div .title {
-  font-weight: 600;
-  font-size: 76px;
-  line-height: 1;
-  letter-spacing: -1.5%;
-  color: #fbfbfb;
-  text-align: left;
-  width: 502px;
-}
-
-.explain {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.2;
-  color: #fbfbfb;
-  width: 472px;
-  height: 80px;
-}
-
-.first-image {
-  width: 650px;
-  height: 800px;
-  background-image: linear-gradient(rgba(20, 20, 20, 0.2));
-}
