--- a/css/styles.css
+++ b/css/styles.css
@@ -96,7 +96,7 @@ gap: 10px;
 border-radius: 30px 30px 30px 30px;
 opacity: 0px;
 background: #7A3145;
-
+border:none;
 font-size: 18px;
 font-weight: 600;
 line-height: 20px;
