--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,105 @@ body {
   margin: 0 auto;
 }
 
+
+.header-container{
+  background-color: #576f35;
+  width: 1280px;
+height: 80px;
+top: 32px;
+padding: 0px 100px 0px 100px;
+gap: 397px;
+opacity: 0px;
+display: flex;
+}
+
+
+.navbar-ul{
+  display: flex;
+  width: 489px;
+height: 52px;
+gap: 20px;
+opacity: 0px;
+list-style-type: none;
+margin-left: 550px;
+margin-top: -30px;
+
+}
+.navcontainer{
+
+font-size: 16px;
+font-weight: 500;
+line-height: 20px;
+letter-spacing: -0.02em;
+text-align: center;
+color: #FBFBFB;
+background-color: transparent;
+justify-content: center;
+
+}
+
+.but-how{
+  border: 1px solid #FBFBFB66;
+  width: 114px;
+height: 44px;
+margin-top: 5px;
+gap: 10px;
+border-radius: 12px 12px 12px 12px;
+
+opacity: 0px;
+
+}
+
+.but-veg{
+  width: 101px;
+height: 44px;
+gap: 10px;
+border-radius: 12px 12px 12px 12px;
+border: 1px solid #FBFBFB66;
+opacity: 0px;
+margin-top: 5px;
+}
+
+.but-rev{
+  width: 81px;
+height: 44px;
+margin-top: 5px;
+gap: 10px;
+border-radius: 12px 12px 12px 12px;
+border: 1px solid #FBFBFB66;
+opacity: 0px;
+
+}
+.logo-svg{
+  width: 194px;
+height: 18px;
+gap: 0px;
+opacity: 0px;
+margin-top:20px;
+display: flex;
+
+}
+
+.but-shop{
+  width: 157px;
+height: 52px;
+padding: 16px 32px 16px 32px;
+gap: 10px;
+border-radius: 30px 30px 30px 30px;
+opacity: 0px;
+background: #7A3145;
+border:none;
+font-size: 18px;
+font-weight: 600;
+line-height: 20px;
+letter-spacing: -0.015em;
+}
+
+.but-shop:hover{
+  background: #622133;
+}
+
+
 .first-div {
   background-color: #576f35;
   display: flex;
