--- a/css/styles.css
+++ b/css/styles.css
@@ -240,15 +240,17 @@ body {
 
 .social-image {
   margin-bottom: 20px;
-  border-radius: 10px;
+  border-radius: 15px;
   overflow: hidden;
-  height: 200px;
+  height: 273px;
+  width: 427px;
 }
 
 .social-image img {
-  width: 100%;
-  height: 100%;
+  width: 427px;
+  height: 273px;
   object-fit: cover;
+
 }
 
 .social-content {
