--- a/css/styles.css
+++ b/css/styles.css
@@ -87,11 +87,11 @@ body {
 }
 
 .but-shop {
-  width: 180px;
+  width: 165px;
   height: 52px;
   padding: 16px 32px 16px 32px;
   gap: 10px;
-  border-radius: 30px 30px 30px 30px;
+  border-radius: 30px;
   opacity: 0px;
   background: #7a3145;
   border: none;
