--- a/css/styles.css
+++ b/css/styles.css
@@ -267,6 +267,7 @@ body {
   margin-bottom: 10px;
   width: 258px;
   height: 20px;
+  opacity: 0.5;
 }
 
 .social-links {
@@ -278,6 +279,11 @@ body {
   color: white;
   text-decoration: none;
   transition: opacity 0.3s;
+  width: 142px;
+  height: 32px;
+  size: 32px;
+  font-weight: 600;
+  line-height: 32px;
 }
 
 .social-link:hover {
