--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ display: flex;
 }
 
 .but-shop{
-  width: 157px;
+  width: 165px;
 height: 52px;
 padding: 16px 32px 16px 32px;
 gap: 10px;
@@ -237,6 +237,41 @@ letter-spacing: -0.015em;
   letter-spacing: -1.5%;
   color:#141414;
   gap: 12px;
+}
+
+/*Resposive Design*/
+@media(max-width:952px){
+  
+}
+@media(max-width:858px){
+  .logo-svg{
+    display: block;
+  }
+  header ul{
+    position:fixed;
+    width:100%;
+    height:100vh;
+    background: #576f35;
+    top:80px;
+    left:-80%;
+    text-align:center;
+    transition:all .5s;
+   
+  
+  }
+
+  nav ul li{
+    display:block;
+    margin:50px 0;
+    line-height:30px;
+
+  }
+
+  nav ul li button{
+    font-size:20px;
+
+  }
+
 }
 
 
