--- a/css/styles.css
+++ b/css/styles.css
@@ -238,10 +238,28 @@ letter-spacing: -0.015em;
   color:#141414;
   gap: 12px;
 }
-
+.checkBtn{
+  font-size:1.5rem;
+  color:#fff;
+  float:right;
+  line-height: 60px;
+  margin-right:40px;
+  cursor:pointer;
+  display: none;
+}
+#check{
+  display:none;
+}
 /*Resposive Design*/
 
 @media(max-width:858px){
+  .checkBtn{
+    display:block;
+    margin-left: 400px;
+  }
+  #check:checked ~ ul {
+    left:0;
+  }
   .logo-svg{
     position:fixed;
     text-align:center;
@@ -251,18 +269,18 @@ letter-spacing: -0.015em;
     background-color: #576f35;
     transition:all .5s;
   }
-  header ul{
+   ul{
     position:fixed;
     width:100%;
     height:100vh;
     top:80px;
-    left:-80%;
+    left: -100%;
     text-align:center;
     transition:all .5s;
   }
   nav ul li{
     display:block;
-    margin:50px 0;
+   flex-direction: column;
     line-height:30px;
     background-color: #576f35;
     transition:all .5s;
