--- a/css/styles.css
+++ b/css/styles.css
@@ -250,9 +250,9 @@ letter-spacing: -0.015em;
 #check{
   display:none;
 }
-/*Resposive Design*/
+/*Resposive Design tablet*/
 
-@media(max-width:858px){
+@media(max-width:768px){
   .checkBtn{
     display:block;
     margin-left: 400px;
@@ -300,4 +300,52 @@ letter-spacing: -0.015em;
 
 }
 
+/*mobil*/
 
+@media(max-width:375px) and (min-width:320px){
+  .checkBtn{
+    display:block;
+    margin-left: 400px;
+  }
+  #check:checked ~ ul {
+    left:0;
+  }
+  .logo-svg{
+    position:fixed;
+    text-align:center;
+    transition:all .5s;
+    background-color: #576f35;
+  }
+  header{
+    background-color: #576f35;
+    transition:all .5s;
+  
+  }
+  .container{
+    background-color: #576f35;
+  }
+  header ul{
+    position:fixed;
+    width:100%;
+    height:100vh;
+    top:80px;
+    left: -100%;
+    text-align:center;
+    transition:all .5s;
+    flex-direction: column;
+    margin-bottom:500px;
+    background-color: #576f35;
+  }
+  nav ul li{
+    display:block;
+   flex-direction: column;
+    line-height:30px;
+    background-color: #576f35;
+    transition:all .5s;
+  }
+  nav ul li button{
+    font-size:20px;
+    transition:all .5s;
+  }
+
+}
