--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,11 @@ body {
   font-family: "Inter Tight", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
+  justify-content: center;
 }
 
 .container {
-  width: 1280px;
+  width: 375px;
   margin: 0 auto;
 }
 
