--- a/css/styles.css
+++ b/css/styles.css
@@ -152,8 +152,8 @@ body {
 
 .organic-vegatables {
   background-color: #7a3145;
-  padding: 100px;
-  gap: 50px;
+  padding: 80px 20px 80px 20px;
+  gap: 40px;
 }
 
 .info {
@@ -161,9 +161,10 @@ body {
 }
 
 .main-text {
+  width: 335px;
   font-weight: 600;
-  font-size: 64px;
-  line-height: 64px;
+  font-size: 48px;
+  line-height: 50px;
   color: #fbfbfb;
   letter-spacing: -1.5%;
   display: flex;
@@ -171,29 +172,31 @@ body {
 }
 
 .main-text > .opacity-vegetables-text {
+  width: 335px;
   font-weight: 600;
-  font-size: 64px;
-  line-height: 64px;
+  font-size: 48px;
+  line-height: 50px;
   color: #fbfbfb;
   opacity: 0.3;
   letter-spacing: -1.5%;
 }
 
 .info-text {
+  width: 335px;
   font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
+  font-size: 14px;
+  line-height: 18px;
   color: #fbfbfb;
-  width: 626px;
   margin-top: 4.063em;
   margin-bottom: 4.063em;
 }
 
 .products-list {
+  width: 334px;
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
-  gap: 21px;
+  gap: 20px;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -202,8 +205,8 @@ body {
 .product-card {
   background-color: #fbfbfb;
   border-radius: 40px;
-  width: 346px;
-  padding: 32px;
+  width: 334px;
+  padding: 32px 26px 32px 26px;
   gap: 10px;
   box-sizing: border-box;
 }
