--- a/css/styles.css
+++ b/css/styles.css
@@ -428,47 +428,55 @@ body {
 
 .reviews-section {
     background-color: #fbfbfb;
-    padding: 100px;
+    padding: 80px 20px 80px 20px;
+    gap: 40px;
 }
 
 .reviews-content {
-    display: flex;
-    flex-direction: column;
-    max-width: 553px;
-    color: #141414;
+  width: 335px;
+  gap: 20px;
+  display: flex;
+  flex-direction: column;
+  max-width: 553px;
+  color: #141414;
 }
 
 .reviews-title {
-  width: 553px;
     font-weight: 600;
-    font-size: 64px;
+    font-size: 48px;
     letter-spacing: -0.96px;
     text-transform: uppercase;
-    line-height: 64px;
+    line-height: 50px;
 }
 
 .reviews-subtitle {
     margin-top: 25px;
-    font: 500 16px/20px "Inter Tight", -apple-system, Roboto, Helvetica, sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 18px;
 }
 
 .reviews-grid {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 25px;
-    margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 18px;
+  margin-top: 50px;
 }
 
 .review-card {
-    border-radius: 24px;
-    background-color: #fbfbfb;
-    border: 1px solid rgba(122, 49, 69, 0.3);
-    padding: 20px;
-    width: 343px;
-    min-height: 258px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  border-radius: 24px;
+  background-color: #fbfbfb;
+  border: 1px solid rgba(122, 49, 69, 0.3);
+  padding: 20px 16px 20px 16px;
+  width: 100%;
+  width: 335x;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+}
+
+.review-card:first-child {
+  display: flex;
 }
 
 .review-image {
