--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
 
 .header-container {
   background-color: #576f35;
-  width: 1280px;
+
   height: 80px;
   top: 32px;
   padding: 0px 100px 0px 100px;
@@ -34,32 +34,41 @@ body {
 }
 #check{
 
-  display: none;
+
+
+  flex-direction: column;
+  display: ;
 }
 #check:checked ~ .navbar-ul{
-overflow: visible;
+left:0;
 }
 
 .navbar-ul {
+ 
 position: fixed;
-top:0;
-right:0;
-height:100vh;
+width: 375px;
+height:300vh;
 width:250px;
-z-index:999;
+top:80px;
 background-color: #622133;
 display:flex;
 flex-direction: column;
 align-items: center;
 backdrop-filter: blur(10px);
-display:;
+height:500px;
+list-style: none;
+margin-left: -38px;
 
 }
 .navbar-ul a{
   display: block;
   text-align: center;
   background-color: #622133;
-  width: 100%;
+  width: 375px;
+  height: 100px;
+ 
+ 
+
 }
 
 
